[project]
name = "langchain-chain-of-verification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=6.2.13",
    "langchain-community>=0.2.4",
    "langchain==0.2.1",
    "python-dotenv>=1.0.1",
]

[project.scripts]
# hello = "langchain_chain_of_verification:hello"
cove = "langchain_chain_of_verification:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
