[project]
name = "langchain-chain-of-verification"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo-search>=6.2.13",
    "langchain-community>=0.2.4",
    "langchain==0.2.1",
    "python-dotenv>=1.0.1",
]
license = "MIT"
# homepage = "https://github.com/tddschn/langchain-chain-of-verification"
# repository = "https://github.com/tddschn/langchain-chain-of-verification"
classifiers = ["Topic :: Utilities"]
keywords = ["prompt-engineering", "langchain", "cli"]

# [tool.poetry.urls]
# "Bug Tracker" = "https://github.com/tddschn/langchain-chain-of-verification/issues"

[project.scripts]
# hello = "langchain_chain_of_verification:hello"
cove = "langchain_chain_of_verification:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
